# holochain-lair-signer

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  types.rs  utils.rs
